# cpp-lazy

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  lgtm.yml  main.cpp  requirements.txt  xmake.lua
.github/workflows/: ci.yml  codeql.yml  make-release.yml
all/: CMakeLists.txt
bench/: .gitignore  CMakeLists.txt  bar_chart_maker.py  benchmarks-iterators.cpp  benchmarks.cpp  main.cpp
cmake/: cpp-lazyConfig.cmake  fmtPICFix.cmake
examples/: Affirm.cpp  AnyView.cpp  CMakeLists.txt  CString.cpp  CartesianProduct.cpp  Chain.cpp  Choose.cpp  ChunkIf.cpp  Chunks.cpp  Concatenate.cpp  CustomIterator.cpp  Enumerate.cpp  Except.cpp  Exclude.cpp  ExclusiveScan.cpp  Filter.cpp  Flatten.cpp  FunctionTools.cpp  Generate.cpp  GenerateWhile.cpp  GroupBy.cpp  InclusiveScan.cpp  Join.cpp  JoinWhere.cpp  Map.cpp  Random.cpp  Range.cpp  RegexSplit.cpp  Repeat.cpp  StringSplitter.cpp  Take.cpp  TakeEvery.cpp  TakeWhile.cpp  ToContainer.cpp  Unique.cpp  Zip.cpp  ZipLongest.cpp
include/: EnumerateIterator.hpp  FilterIterator.hpp  LazyCpp.hpp  Lz.hpp  MapIterator.hpp  RangeIterator.hpp  SplitIterator.hpp  TakeIterator.hpp  ZipIterator.h  ZipIterator.hpp
include/Lz/: Affirm.hpp  Algorithm.hpp  AnyView.hpp  CString.hpp  CartesianProduct.hpp  Choose.hpp  ChunkIf.hpp  Chunks.hpp  Common.hpp  Concatenate.hpp  DropWhile.hpp  Enumerate.hpp  Except.hpp  Exclude.hpp  ExclusiveScan.hpp  Filter.hpp  Flatten.hpp  FunctionTools.hpp  Generate.hpp  GenerateWhile.hpp  GroupBy.hpp  InclusiveScan.hpp  IterBase.hpp  IterTools.hpp  Iterator.hpp  Join.hpp  JoinWhere.hpp  LeftJoin.hpp  Loop.hpp  Lz.hpp  Map.hpp  Random.hpp  Range.hpp  RegexSplit.hpp  Repeat.hpp  Rotate.hpp  Splitter.hpp  StringSplitter.hpp  StringView.hpp  Take.hpp  (+28 more)
include/Lz/detail/: AffirmIterator.hpp  Algorithm.hpp  BasicIterable.hpp  BasicIteratorView.hpp  CStringIterator.hpp  CartesianProductIterator.hpp  ChooseIterator.hpp  ChunkIfIterator.hpp  ChunksIterator.hpp  CompilerChecks.hpp  ConcatenateIterator.hpp  Concepts.hpp  DropWhileIterator.hpp  EnumerateIterator.hpp  ExceptIterator.hpp  ExcludeIterator.hpp  ExclusiveScanIterator.hpp  FakePointerProxy.hpp  FilterIterator.hpp  FlattenIterator.hpp  FunctionContainer.hpp  GenerateIterator.hpp  GenerateWhileIterator.hpp  GroupByIterator.hpp  InclusiveScanIterator.hpp  JoinIterator.hpp  JoinWhereIterator.hpp  LeftJoinIterator.hpp  LoopIterator.hpp  LzTools.hpp  MapIterator.hpp  Optional.hpp  Procs.hpp  RandomIterator.hpp  RangeIterator.hpp  RegexSplitIterator.hpp  RepeatIterator.hpp  RotateIterator.hpp  SplitIterator.hpp  TakeEveryIterator.hpp  (+10 more)
include/Lz/detail/iterators/: AnyViewHelpers.hpp  CStringIterator.hpp  CartesianProductIterator.hpp  ChunkIfIterator.hpp  ChunksIterator.hpp  CommonIterator.hpp  ConcatenateIterator.hpp  EnumerateIterator.hpp  ExceptIterator.hpp  ExcludeIterator.hpp  ExclusiveScanIterator.hpp  FilterIterator.hpp  FlattenIterator.hpp  GenerateIterator.hpp  GenerateWhileIterator.hpp  GroupByIterator.hpp  InclusiveScanIterator.hpp  JoinIterator.hpp  JoinWhereIterator.hpp  LoopIterator.hpp  MapIterator.hpp  RandomIterator.hpp  RangeIterator.hpp  RegexSplitIterator.hpp  RepeatIterator.hpp  RotateIterator.hpp  SplitIterator.hpp  TakeEveryIterator.hpp  TakeNIterator.hpp  TakeWhileIterator.hpp  UniqueIterator.hpp  ZipIterator.hpp  ZipLongestIterator.hpp  any_view_helpers.hpp  c_string.hpp  cartesian_product.hpp  chunk_if.hpp  chunks.hpp  common.hpp  concatenate.hpp  (+27 more)
include/Lz/detail/iterators/anyview/: AnyIteratorImpl.hpp  IteratorBase.hpp  any_impl.hpp  iterator_base.hpp
include/Lz/ft/: Ft.hpp
include/Lz/it/: Enumerate.hpp  Except.hpp  Filter.hpp  It.hpp  Map.hpp  Product.hpp  Range.hpp  StringSplitter.hpp  Take.hpp  Zip.hpp
include/Lz/it/detail/: ExceptIterator.hpp  LzTools.hpp  MapIterator.hpp  ProductIterator.hpp  SplitIterator.hpp  TakeIterator.hpp  ZipIterator.hpp
src/: FilterIterator.hpp  MapIterator.hpp  RangeIterator.hpp  SplitIterator.cpp  SplitIterator.hpp  Tools.hpp  WhereIterator.hpp  ZipIterator.h  cpp-lazy.sln  cpp-lazy.sln.DotSettings  cpp-lazy.vcxproj  cpp-lazy.vcxproj.filters  lz.cppm  main.cpp
tests/: CMakeLists.txt  CTestConfig.cmake  affirm-tests.cpp  algorithm-tests.cpp  any-view-tests.cpp  cartesian-product-tests.cpp  choose-tests.cpp  chunk-if-tests.cpp  chunks-tests.cpp  common-tests.cpp  concatenate-tests.cpp  cstring-tests.cpp  drop-while-tests.cpp  enumerate-tests.cpp  except-tests.cpp  exclude-tests.cpp  exclusive-scan-tests.cpp  filter-tests.cpp  flatten-tests.cpp  function-tools-tests.cpp  generate-tests.cpp  generate-while-tests.cpp  group-by-tests.cpp  inclusive-scan-tests.cpp  iter-tools-tests.cpp  join-tests.cpp  join-where-tests.cpp  left-join-tests.cpp  loop-tests.cpp  lz-chain-tests.cpp  map-tests.cpp  random-tests.cpp  range-tests.cpp  regex-split-tests.cpp  repeat-tests.cpp  rotate-tests.cpp  standalone-tests.cpp  standalone.cpp  string-splitter-tests.cpp  string-view-tests.cpp  (+7 more)
